--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Разработка и дизайн веб-сайтов | Лабораторные работы</title>
   <style>
     a {
-      color: black;
+      font-size: 20px;
     }
 
     li {
@@ -18,7 +18,7 @@
 <body>
   <h1>Лабораторные работы: </h1>
   <ol>
-    <li><a href="lab1/lab1_1.html">Основные понятия HTML. Ссылки и иллюстрации</a></li>
+    <li><a href="lab1">Основные понятия HTML. Ссылки и иллюстрации</a></li>
     <li><a href="lab2/">Списки и таблицы. Фреймы и формы</a></li>
     <li><a href="lab3/">Использование стилей</a></li>
     <li><a href="lab4/">Оформление вертикального меню</a></li>
