--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <li><a href="lab4/">Оформление вертикального меню</a></li>
     <li><a href="lab5/">Позиционирование элементов</a></li>
     <li><a href="lab6/">Блочная вёрстка сайта</a></li>
-    <li><a href="lab7/"_>Работа с фреймворком Bootstrap</a></li>
+    <li><a href="lab7/">Работа с фреймворком Bootstrap</a></li>
   </ol>
 </body>
 </html>
