--- a/lab1/lab1_4.html
+++ b/lab1/lab1_4.html
@@ -23,10 +23,7 @@
 		Если задан только один из атрибутов, второй размер будет высчитан в соответствие с пропорциями изображения и заданным атрибутом.
 		При указании обоих атрибутов ПА «впишет» изображение в область с указанными размерами.</p>
         
-        <figure>
         <img src="images/html5-logo.png" width="100" height="100">
-        <figcaption>Изображение 100x100</figcaption>
-        </figure>
 
 		<p>Для добавления гибких (responsive) изображений (таких, 
 		которые отображаются хорошо на устройствах с сильно отличающимися размерами экрана, разрешением, и другими характеристиками)
@@ -36,15 +33,22 @@
 
 		</p>
 
-        <img src="images/muscle.png" sizes="100">
-        <img src="images/mushroom_retina.jpg" srcset="images/mushroom_portrait.jpg 1x, images/mushroom.jpg 2x">
-
+        <img src="images/muscle.png" sizes="1000">
+		<picture>
+			<source media="(min-width: 1200px)" srcset="images/mushroom_landscape.jpg">
+			<source media="(min-width: 768px)" srcset="images/mushroom_retina.jpg">
+			<img src="images/mushroom_portrait.jpg">
+		</picture>
 
 		<h2>Подпись к изображению</h2>
 		<p>Для группирования любых элементов, например, изображений и подписей к ним используется элемент <code>figure</code>.
 		Он не должен быть связан непосредственно с основным содержимым документа и при его перемещении в другое место смысл текста не должен меняться. 
 		Обычно применяется для иллюстраций, фрагментов кода, схем, графиков, диаграмм и др.
 		Элемент <code>figcaption</code> содержит описание для элемента <code>figure</code>. Он должен быть первым или последним элементом в группе.</p>
+		<figure>
+			<img src="images/html5-logo.png">
+			<figcaption>Изображение</figcaption>
+		</figure>
 
 		<h2>Элемент picture</h2>
 		<p>
@@ -55,6 +59,11 @@
 		найдено не будет, то будет выбран файл, указанный  атрибутом  <code>src</code> элемента <code>img</code>. 
 		Затем выбранное изображение отображается в пространстве, занятом элементом <code>img</code>. 
 		</p>
+
+		<picture>
+			<source srcset="images/redcat.jpg" media="(max-width: 800px)">
+			<img src="images/aquaria.jpg" alt="Абстрактное изображение">
+		  </picture>
 	</section>
 </body>
 </html>
