--- a/lab1/lab1_4.html
+++ b/lab1/lab1_4.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="ru">
 <head>
 	<meta charset="utf-8">
 	<title>Изображения</title>
@@ -11,33 +12,31 @@
 
 		<p>Элемент <code>img</code> внедряет изображение в текущий документ в месте определения элемента. Элемент <code>img</code> не имеет содержимого — он замещается на ходу изображением, указанным в атрибуте <code>src</code>.</p>
 
-        <img src="images/globus.gif">
+        <img src="images/globus.gif" alt="">
 
 		<h2>Альтернативный текст</h2>
 		<p>Атрибут <code>alt</code> предоставляет краткое описание изображения. Он содержит альтернативный текст, который отображается, если изображение не может быть выведено. Пользовательские агенты должны отображать альтернативный текст, если они не поддерживают изображения, или сконфигурированы так, чтобы не показывать изображения (отключен показ изображений).</p>
 
-        <img alt="Изображение не было загружено.">
+        <img src="images/empty.jpg" alt="Изображение не было загружено.">
 
 		<h2>Размеры изображения</h2>
 		<p>Атрибуты <code>width</code> и <code>height</code> задают размеры области изображения. Если оба атрибута не заданы, размер изображения будет определен после его полной загрузки, после чего размеры области будут изменены для размещения содержания картинки.
 		Если задан только один из атрибутов, второй размер будет высчитан в соответствие с пропорциями изображения и заданным атрибутом.
 		При указании обоих атрибутов ПА «впишет» изображение в область с указанными размерами.</p>
         
-        <img src="images/html5-logo.png" width="100" height="100">
+        <img src="images/html5-logo.png" alt="" width="100" height="100">
 
 		<p>Для добавления гибких (responsive) изображений (таких, 
 		которые отображаются хорошо на устройствах с сильно отличающимися размерами экрана, разрешением, и другими характеристиками)
 		используют атрибуты <code>sizes</code> и  <code>srcset</code>.
 		Атрибут <code>sizes</code> задаёт размеры изображения для разных макетов страницы. 
 		Атрибут <code>srcset</code> задаёт путь к графическим файлам с учётом размера изображения и устройств.
-
 		</p>
 
-        <img src="images/muscle.png" sizes="1000">
 		<picture>
 			<source media="(min-width: 1200px)" srcset="images/mushroom_landscape.jpg">
 			<source media="(min-width: 768px)" srcset="images/mushroom_retina.jpg">
-			<img src="images/mushroom_portrait.jpg">
+			<img src="images/mushroom_portrait.jpg" alt="">
 		</picture>
 
 		<h2>Подпись к изображению</h2>
