--- a/lab1/index.html
+++ b/lab1/index.html
@@ -21,6 +21,7 @@
     <li><a href="lab1_2.html">lab1_2.html</a></li>
     <li><a href="lab1_3/doc.html">lab1_3</a></li>
     <li><a href="lab1_4.html">lab1_4.html</a></li>
+    <li><a href="lab1_5.html">lab1_5.html</a></li>
   </ul>
 </body>
 </html>
