--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -62,9 +62,9 @@
         Желательно заменять закрывающую угловую скобку, одиночные и двойные кавычки.</p>
 
     <p>Пример: </p>
-    <pre><code>
-        <h2 class="center">Голландская фирма Horns&amp;Hoofs запустила online-магазин</h2>
-    </code></pre>
+    <code>&lt;h2 class="center"&gt;
+        Голландская фирма Horns&amp;Hoofs запустила online-магазин
+        &lt;/h2&gt;</code>
 
     <h2>3. Элементы строчного уровня (inline elements)</h2>
     <h3>3.1. Непосредственное и логическое форматирование текста</h3>
