--- a/lab2/index.html
+++ b/lab2/index.html
@@ -19,7 +19,7 @@
   <ul>
     <li><a href="list.html">list.html</a></li>
     <li><a href="tables.html">tables.html</a></li>
-    <li><a href="iframes">iframes</a></li>
+    <li><a href="iframes/index.html">iframes</a></li>
     <li><a href="iframes.html">iframes.html</a></li>
     <li><a href="form.html">form.html</a></li>
   </ul>
