--- a/lab2/iframes.html
+++ b/lab2/iframes.html
@@ -18,12 +18,11 @@
 
 <h2>Демонстрация добавления встроенного фрейма</h2>
 <figure>
-    <iframe src="https://www.youtube.com/watch?v=t6NIAlyQ15k&t=6s"></iframe>
+    <iframe src="https://www.youtube.com/embed/t6NIAlyQ15k" allowfullscreen></iframe>
     <figcaption>Физико-математический факультет</figcaption>
 </figure>
-
 <figure>
-    <iframe src="https://yandex.ru/maps/10/orel/?from=api-maps&ll=36.063909%2C52.951255&mode=search&oid=1030860442&ol=biz&utm_source=api-maps&z=17"></iframe>
+    <iframe src="https://yandex.ru/map-widget/v1/?from=api-maps&ll=36.063909%2C52.951255&mode=search&oid=1030860442&ol=biz&utm_source=api-maps&z=17" allowfullscreen></iframe>
     <figcaption>ОГУ имени И.С. Тургенева</figcaption>
 </figure>
 
