--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <li><a href="lab3/">Использование стилей</a></li>
     <li><a href="lab4/">Оформление вертикального меню</a></li>
     <li><a href="lab5/">Позиционирование элементов</a></li>
-    <li><a href="lab6/">Блочная вёрстка сайта</a></li>
-    <li><a href="lab7/">Работа с фреймворком Bootstrap</a></li>
+    <li>Блочная вёрстка сайта</li>
+    <li>Работа с фреймворком Bootstrap</li>
   </ol>
 </body>
 </html>
