--- a/lab2/form.html
+++ b/lab2/form.html
@@ -15,7 +15,7 @@
         </tr>
         <tr>
             <td>Пароль</td>
-            <td><input type="text" id="password" placeholder="Введите пароль" required></td>
+            <td><input type="password" id="password" placeholder="Введите пароль" required></td>
         </tr>
         <tr>
             <td>Пол</td>
