--- a/lab3/index.html
+++ b/lab3/index.html
@@ -18,7 +18,11 @@
   <h1>Лабораторная работа №3: Использование стилей</h1>
   <ul>
     <li><a href="lab_3_1.html">lab_3_1.html</a></li>
-    <li><a href="lab_3_2.html">lab_3_2.html</a></li>
+    <li><a href="lab_3_2.html">lab_3_2.html (style.css)</a></li>
+    <li><a href="lab_3_2_3.html">lab_3_2_3.html (inline-styles)</a></li>
+    <li><a href="lab_3_2_4.html">lab_3_2_4.html (favicon, fonts)</a></li>
+    <li><a href="lab_3_2_5.html">lab_3_2_5.html (reset.css)</a></li>
+    <li><a href="lab_3_2_6.html">lab_3_2_6.html (normalize.css)</a></li>
   </ul>
 </body>
 </html>
