--- a/lab3/lab_3_2_3.html
+++ b/lab3/lab_3_2_3.html
@@ -5,7 +5,7 @@
 	<title>Стили</title>
 	<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color: white; color: black;">
 	<div class="wrapper">
 		<h1>Приватные и публичные программы</h1>
 		<hr>
