--- a/lab3/lab_3_2_5.html
+++ b/lab3/lab_3_2_5.html
@@ -3,7 +3,41 @@
 <head>
 	<meta charset="utf-8">
 	<title>Стили</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="icon" type="image/png" href="favicon-32x32.png">
+	<link rel="stylesheet" href="reset.css">
+	<style>
+		
+		@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+		body {
+				color: black;
+				background-image: url('bg.png');
+		}
+		h1, h2 {
+				text-align: right;
+				font-family: 'Roboto';
+				color: red;
+		}
+
+		h1, h2, p {
+			margin: 20px;
+		}
+
+		em {
+				color: green;
+				padding: 1px;
+				border-bottom: 3px double black;
+		}
+		.wrapper {
+				max-width: 960px;
+				margin: 0 auto;
+				padding-left: 10px;
+				padding-right: 10px;
+		}				
+		strong {
+			font-family: 'Caveat';
+		}
+	</style>
 </head>
 <body>
 	<div class="wrapper">
