--- a/lab7/index.html
+++ b/lab7/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Разработка и дизайн веб-сайтов | Лабораторные работы</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <style>
     a {
       font-size: 20px;
@@ -15,9 +16,13 @@
   </style>
 </head>
 <body>
-  <h1>Лабораторная работа №7: Работа с фреймворком Bootstrap</h1>
-  <ul>
-    <li><a href="lab7_1.html">lab7_1.html</a></li>
-  </ul>
+  <div class="container">
+    <header class="header">
+    </header>
+    <section class="main">
+    </section>
+    <footer class="footer">
+    </footer>
+  </div>
 </body>
 </html>
