--- a/lab6/lab6_3.html
+++ b/lab6/lab6_3.html
@@ -3,12 +3,29 @@
 <head>
 	<meta charset="utf-8">
 	<title>Стили</title>
-	<link rel="stylesheet" href="style.css">
 	<style>
+	body {
+    background-color: black;	
+    color: white;
+	}
+	h1, h2 {
+			text-align: right;
+			font-family: Arial, sans-serif;
+			color: red;
+	}
+
+	em {
+			color: green;
+	}
+	.wrapper {
+			max-width: 960px;
+			margin: 0 auto;
+			padding-left: 10px;
+			padding-right: 10px;
+	}		
 	@media print {
-		body {
+		em, h1, h2, p {
 			color: #000;
-			background-color: #fff;
 		}
 	}
 	</style>
