--- a/lab2/tables.html
+++ b/lab2/tables.html
@@ -46,6 +46,7 @@ td, th {
 		</tr>
 		</tbody>
 	</table>
+	<div style="clear: both;">
     <table>
 		<caption>3-я таблица</caption>
 		<tbody>
@@ -76,5 +77,6 @@ td, th {
 		</tr>
 		</tbody>
 	</table>
+	</div>
 </body>
 </html>
