--- a/lab2/form.html
+++ b/lab2/form.html
@@ -25,7 +25,11 @@
         <tr>
             <td>Год рождения</td>
             <td>
-                <input type="number" min="1900" max="2024">-й
+                    <select name="birth_year">
+                        <option value="2003">2003</option>
+                        <option value="2004">2004</option>
+                        <option value="2005">2005</option>
+                    </select>-й
             </td>
         </tr>
         <tr>
