--- a/lab7/index.html
+++ b/lab7/index.html
@@ -5,19 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Разработка и дизайн веб-сайтов | Лабораторные работы</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <style>
-    a {
-      font-size: 20px;
-    }
-
-    li {
-      margin-top: 15px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header class="header">
+      <div class="header-logo">
+
+      </div>
     </header>
     <section class="main">
     </section>
