--- a/lab4/lab_4_2_4.html
+++ b/lab4/lab_4_2_4.html
@@ -32,9 +32,23 @@
                 position: relative;
             }
 
-			.fa-regular {
+			.menu > ul > li:before {
+				font-family: 'FontAwesome',sans-serif;
+				content: '\f196';
 				position: absolute;
-				left: 20px;
+				left: -20px;
+			}
+
+			.menu li ul li:before {
+				font-family: 'FontAwesome', sans-serif;
+				content: '\f192';
+				position: absolute;
+				left: -20px;
+			}
+
+			.menu > ul > li:hover:before {
+				content: '\f147';
+
 			}
 	</style>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -42,35 +56,35 @@
 <body>
 	<nav class="menu">
 		<ul>
-			<li><i class="fa-li fa-regular">&#xf146;</i><a href="#">Фильмы</a>
+			<li><a href="#">Фильмы</a>
 				<ul>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">Экшн</a></li>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">Мелодрамы</a></li>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">Сериалы</a></li>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">Семейные</a></li>
+					<li><a href="#">Экшн</a></li>
+					<li><a href="#">Мелодрамы</a></li>
+					<li><a href="#">Сериалы</a></li>
+					<li><a href="#">Семейные</a></li>
 				</ul>
 			</li>
-			<li><i class="fa-li fa-regular">&#xf146;</i><a href="#">Музыка</a>
+			<li><a href="#">Музыка</a>
 				<ul>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">Классика</a></li>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">Джаз</a></li>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">Рок</a></li>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">Грандж</a></li>
+					<li><a href="#">Классика</a></li>
+					<li><a href="#">Джаз</a></li>
+					<li><a href="#">Рок</a></li>
+					<li><a href="#">Грандж</a></li>
 				</ul>
 			</li>
-			<li><i class="fa-li fa-regular">&#xf146;</i><a href="#">Софт</a>
+			<li><a href="#">Софт</a>
 				<ul>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">Графика</a></li>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">3D-моделирование</a></li>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">Машинопись</a></li>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">Переводчики</a></li>
+					<li><a href="#">Графика</a></li>
+					<li><a href="#">3D-моделирование</a></li>
+					<li><a href="#">Машинопись</a></li>
+					<li><a href="#">Переводчики</a></li>
 				</ul>
 			</li>
-			<li><i class="fa-li fa-regular">&#xf146;</i><a href="#">Игры</a>
+			<li><a href="#">Игры</a>
 				<ul>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">РПГ</a></li>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">Шутеры</a></li>
-					<li><i class="fa-li fa-regular">&#xf192;</i><a href="#">Пасьянсы</a></li>
+					<li><a href="#">РПГ</a></li>
+					<li><a href="#">Шутеры</a></li>
+					<li><a href="#">Пасьянсы</a></li>
 				</ul>
 			</li>
 		</ul>
