--- a/mamon/index.html
+++ b/mamon/index.html
@@ -40,10 +40,146 @@
             <h2>OUR SERVICES</h2>
             <div class="services-grid">
                 <div class="service-item">
+                    <div class="service-img">
+                        <img src="img/smartphone.svg" alt="smartphone-img">
+                    </div>
+                    <div class="service-description">
+                        <span>Mobile Development</span>
+                        <p>We develop mobile apps for all contemporary mobile platforms. Mamon team builds native and cross-platform solutions.</p>
+                    </div>
+                </div>
+                <div class="service-item">
+                    <div class="service-img">
+                        <img src="img/monitor.svg" alt="monitor-img">
+                    </div>
+                    <div class="service-description">
+                        <span>Web Development</span>
+                        <p>Mamon offers full range of services from various CMS and frameworks based websites to complex ERP/CRM solutions and e-commerce stores.</p>
+                    </div>
+                </div>
+                <div class="service-item">
+                    <div class="service-img">
+                        <img src="img/layers.svg" alt="layers-img">
+                    </div>
+                    <div class="service-description">
+                        <span>Product Design</span>
+                        <p>We create design given the product audience, goal, business domain, technology and the platform for the solution.</p>
+                    </div>
+                </div>
+                <div class="service-item">
+                    <div class="service-img">
+                        <img src="img/test.svg" alt="test-img">
+                    </div>
+                    <div class="service-description">
+                        <span>Quality Assurance</span>
+                        <p>Our QA team ensures high standard of quality of products delivered.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
+    <section class="clients">
+        <div class="container">
+            <h2>OUR CLIENTS</h2>
+            <div class="clients-grid">
+                <div class="client"><img src="img/logo-lightspeed.svg" alt="lightspeed-img"></div>
+                <div class="client"><img src="img/logo-trvl.svg" alt="trvl-img"></div>
+                <div class="client"><img src="img/logo-spider-strategies.svg" alt="spider-strategies-img"></div>
+                <div class="client"><img src="img/logo-tripadvisor.svg" alt="tripadvisor-img"></div>
+                <div class="client"><img src="img/logo-shutterfly.svg" alt="shutterfly-img"></div>
+                <div class="client"><img src="img/logo-decos.svg" alt="decos-img"></div>
+                <div class="client"><img src="img/logo-tiqets.svg" alt="tiqets-img"></div>
+                <div class="client"><img src="img/logo-hotelchamp.svg" alt="hotelcamp-img"></div>
+                <div class="client"><img src="img/logo-flitsmeister.svg" alt="flitsmeister-img"></div>
+                <div class="client"><img src="img/logo-sap.svg" alt="sap-img"></div>
+                <div class="client"><img src="img/logo-redkix.svg" alt="redkix-img"></div>
+                <div class="client"><img src="img/logo-nos.svg" alt="nos-img"></div>
+            </div>
+        </div>
+    </section>
+    <section class="team">
+        <div class="container">
+            <h2>OUR TEAM</h2>
+            <div class="team-grid">
+                <div class="worker">
+                    <div class="worker-img"><img src="img/vadim.svg" alt="vadim-img"></div>
+                    <div class="worker-description">
+                        <span>Vadim</span>
+                        <p>Managing Director</p>
+                    </div>
+                </div>
+                <div class="worker">
+                    <div class="worker-img"><img src="img/sergey.svg" alt="sergey-img"></div>
+                    <div class="worker-description">
+                        <span>Sergey</span>
+                        <p>Technology Director</p>
+                    </div>
+                </div>
+                <div class="worker">
+                    <div class="worker-img"><img src="img/andrey.svg" alt="andrey-img"></div>
+                    <div class="worker-description">
+                        <span>Andrey</span>
+                        <p>Front-end Developer</p>
+                    </div>
+                </div>
+                <div class="worker">
+                    <div class="worker-img"><img src="img/alex.svg" alt="alex-img"></div>
+                    <div class="worker-description">
+                        <span>Alex</span>
+                        <p>Front-end Developer</p>
+                    </div>
+                </div>
+                <div class="worker">
+                    <div class="worker-img"><img src="img/agneshka.svg" alt="agneshka-img"></div>
+                    <div class="worker-description">
+                        <span>Agneshka</span>
+                        <p>Mobile Developer</p>
+                    </div>
+                </div>
+                <div class="worker">
+                    <div class="worker-img"><img src="img/dmitry.svg" alt="dmitry-img"></div>
+                    <div class="worker-description">
+                        <span>Dmitry</span>
+                        <p>Back-end Developer</p>
+                    </div>
+                </div>
+                <div class="worker">
+                    <div class="worker-img"><img src="img/artyom.svg" alt="artyom-img"></div>
+                    <div class="worker-description">
+                        <span>Artyom</span>
+                        <p>Back-end Developer</p>
+                    </div>
+                </div>
+                <div class="worker">
+                    <div class="worker-img"><img src="img/evgeny.svg" alt="evgeny-img"></div>
+                    <div class="worker-description">
+                        <span>Evgeny</span>
+                        <p>Product Designer</p>
+                    </div>
+                </div>
+                <div class="worker">
+                    <div class="worker-img"><img src="img/tom.svg" alt="tom-img"></div>
+                    <div class="worker-description">
+                        <span>Tom</span>
+                        <p>Product Designer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-container">
+                <img src="img/mamon-logo.svg" alt="mamon-logo" class="footer-logo">
+                <div class="footer-socials">
+                    <img src="img/github.svg" alt="github-logo">
+                    <img src="img/behance.svg" alt="behance-logo">
+                    <img src="img/in.svg" alt="in-logo">
+                    <img src="img/cube.svg" alt="cube-logo">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
