--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <li><a href="lab3/">Использование стилей</a></li>
     <li><a href="lab4/">Оформление вертикального меню</a></li>
     <li><a href="lab5/">Позиционирование элементов</a></li>
-    <li><a href="lab6/">Верстка сайта по макету из Figma</a></li>
+    <li><a href="mamon/">Верстка сайта по макету из Figma</a></li>
   </ol>
 </body>
 </html>
