--- a/mamon/index.html
+++ b/mamon/index.html
@@ -15,27 +15,27 @@
             <nav class="header-nav">
                 <ul class="header-list">
                     <li class="header-item">
-                        <a href="#" class="header-link">Services</a>
+                        <a href="#services" class="header-link">Services</a>
                     </li>
                     <li class="header-item">
-                        <a href="#" class="header-link">Clients</a>
+                        <a href="#clients" class="header-link">Clients</a>
                     </li>
                     <li class="header-item">
-                        <a href="#" class="header-link">Our team</a>
+                        <a href="#team" class="header-link">Our team</a>
                     </li>
                     <li class="header-item">
-                        <a href="#" class="header-link">Contact Us</a>
+                        <a href="#contact" class="header-link">Contact Us</a>
                     </li>
                 </ul>
             </nav>
         </header>
-        <section class="banner">
+        <section class="banner" id="contact">
             <h1>We're an independent development agency.</h1>
             <p>We understand the intricacies of web development inside-out. That's why we build rock-solid Mobile and Web applications enriched with user-centered visual experiences.</p>
             <button>Contact Us</button>
         </section>
     </div>
-    <section class="services">
+    <section class="services" id="services">
         <div class="container">
             <h2>OUR SERVICES</h2>
             <div class="services-grid">
@@ -79,7 +79,7 @@
             </div>
         </div>
     </section>
-    <section class="clients">
+    <section class="clients" id="clients">
         <div class="container">
             <h2>OUR CLIENTS</h2>
             <div class="clients-grid">
@@ -98,7 +98,7 @@
             </div>
         </div>
     </section>
-    <section class="team">
+    <section class="team" id="team">
         <div class="container">
             <h2>OUR TEAM</h2>
             <div class="team-grid">
