--- a/lab5/lab5_3.html
+++ b/lab5/lab5_3.html
@@ -7,27 +7,35 @@
 	* {
 		box-sizing: border-box;
 	}
+	.container {
+		min-width: max-content;
+	}
 	#left{
 		background:#ccf;
 		width: 200px;
+		vertical-align: top;
 		display: inline-block;
 	}
 	#right{
 		background:#fcc;
 		width: 200px;
+		vertical-align: top;
 		display: inline-block;
 	}
 	#center{
 		background:#cfc;
 		width: 600px;
+		vertical-align: top;
 		display: inline-block;
 	}
 </style>
 </head>
 <body>
+<div class="container">
 	<div id="left">left<br>left<br>left<br>left<br>left</div>
 	<div id="center">center text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</div>
 	<div id="right">right<br>right<br>right<br>right</div>
+</div>
 </body>
 </html>
 
