--- a/javascript/lab1/index.html
+++ b/javascript/lab1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Управляющие конструкции</title>
-    <script></script>
+    <script src="script.js"></script>
 </head>
 <body>
 
