--- a/javascript/lab1/index.html
+++ b/javascript/lab1/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Управляющие конструкции</title>
-    <script src="script.js"></script>
+  <style>
+    a {
+      font-size: 20px;
+    }
+
+    li {
+      margin-top: 15px;
+    }
+
+  </style>
 </head>
 <body>
-
+  <h1>Задания: </h1>
+  <ol>
+    <li><a href="task1.hmtl">Задание 1</a></li>
+    <li><a href="task2.html">Задание 2</a></li>
+    <li><a href="task3.html/">Задание 3</a></li>
+    <li><a href="task4.html">Задание 4</a></li>
+    <li><a href="task5.html">Задание 5</a></li>
+  </ol>
 </body>
 </html>
