--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <li><a href="lab4/">Оформление вертикального меню</a></li>
     <li><a href="lab5/">Позиционирование элементов</a></li>
     <li><a href="mamon/">Верстка сайта по макету из Figma</a></li>
+    <li><a href="javascript/">JavaScript</a></li>
   </ol>
 </body>
 </html>
