--- a/javascript/lab1/index.html
+++ b/javascript/lab1/index.html
@@ -17,9 +17,9 @@
 <body>
   <h1>Задания: </h1>
   <ol>
-    <li><a href="task1.hmtl">Задание 1</a></li>
+    <li><a href="task1.html">Задание 1</a></li>
     <li><a href="task2.html">Задание 2</a></li>
-    <li><a href="task3.html/">Задание 3</a></li>
+    <li><a href="task3.html">Задание 3</a></li>
     <li><a href="task4.html">Задание 4</a></li>
     <li><a href="task5.html">Задание 5</a></li>
   </ol>
