--- a/javascript/index.html
+++ b/javascript/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li>
             <a href="lab1">Управлящющие конструкции</a>
+            <a href="lab2">Функции</a>
         </li>
     </ul>
 </body>
