--- a/javascript/index.html
+++ b/javascript/index.html
@@ -15,6 +15,12 @@
         <li>
             <a href="lab2">Функции</a>
         </li>
+        <li>
+            <a href="lab3">Числа, строки и массивы</a>
+        </li>
+        <li>
+            <a href="lab4">Объекты, дата и время</a>
+        </li>
     </ul>
 </body>
 </html>
