--- a/javascript/lab4/index.html
+++ b/javascript/lab4/index.html
@@ -15,23 +15,15 @@
 </head>
 <body>
 <h1>Задания: </h1>
-<ol>
-    <li><a href="#" onclick="runScript('lab4_1.js')">Задание 1</a></li>
-    <li><a href="#" onclick="runScript('lab4_2.js')">Задание 2</a></li>
-    <li><a href="#" onclick="runScript('lab4_3.js')">Задание 3</a></li>
-    <li><a href="#" onclick="runScript('lab4_4.js')">Задание 4</a></li>
-    <li><a href="#" onclick="runScript('lab4_5.js')">Задание 5</a></li>
-    <li><a href="#" onclick="runScript('lab4_6.js')">Задание 6</a></li>
-    <li><a href="#" onclick="runScript('lab4_7.js')">Задание 7</a></li>
-    <li><a href="#" onclick="runScript('lab4_8.js')">Задание 8</a></li>
-</ol>
-
-<script>
-    function runScript(scriptName) {
-        var scriptElement = document.createElement('script');
-        scriptElement.src = scriptName;
-        document.body.appendChild(scriptElement);
-    }
-</script>
+<ul>
+    <li><a href="lab4_1.html">Задание 1</a></li>
+    <li><a href="lab4_2.html">Задание 2</a></li>
+    <li><a href="lab4_3.html">Задание 3</a></li>
+    <li><a href="lab4_4.html">Задание 4</a></li>
+    <li><a href="lab4_5.html">Задание 5</a></li>
+    <li><a href="lab4_6.html">Задание 6</a></li>
+    <li><a href="lab4_7.html">Задание 7</a></li>
+    <li><a href="lab4_8.html">Задание 8</a></li>
+</ul>
 </body>
 </html>
