--- a/javascript/index.html
+++ b/javascript/index.html
@@ -21,6 +21,15 @@
         <li>
             <a href="lab4">Объекты, дата и время</a>
         </li>
+        <li>
+            <a href="lab5">Документ и объекты страницы</a>
+        </li>
+        <li>
+            <a href="lab6">Работа с событиями</a>
+        </li>
+        <li>
+            <a href="lab6">Формы, элементы управления</a>
+        </li>        
     </ul>
 </body>
 </html>
