--- a/javascript/lab7/lab7_2.html
+++ b/javascript/lab7/lab7_2.html
@@ -13,6 +13,8 @@
 
         #placeholder-text {
             text-align: center;
+            position: absolute;
+            top: -20px;
         }
 
         input[type="text"] {
@@ -32,8 +34,8 @@
     </style>
 </head>
 <body>
-    <div id="placeholder-text"></div>
     <div class="input-container">
+        <div id="placeholder-text"></div>
         <input type="text" id="myInput" data-placeholder="Введите текст">
         <label for="myInput" class="placeholder"></label>
     </div>
